Collapse equipement fix

--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -21,7 +21,7 @@
     color: white;
     margin: 0px 0px;
     position: absolute;
-    padding: 10% 2% 2% 2%;
+    padding: 15% 2% 2% 2%;
     bottom: 1%;
 }
 
